refactoring project and add trancate-text functional

--- a/src/main/resources/templates/articles/create.html
+++ b/src/main/resources/templates/articles/create.html
@@ -17,32 +17,10 @@
                         <input class="validate" id="heading" type="text" th:field="*{label}">
                         <label for="heading">Название статьи</label>
                     </div>
-                    <div id="chapters">
-                        <th:block th:each="chapter, item : *{chapters}">
-                            <div class="row">
-                                <div class="col s11">
-                                    <div class="input-field">
-                                        <input class="validate" type="text" th:id="${T(java.lang.String).format('%s-%s', item.index, 'heading')}" th:field="*{chapters[__${item.index}__].label}">
-                                        <label th:for="${T(java.lang.String).format('%s-%s', item.index, 'heading')}">Название раздела</label>
-                                    </div>
-                                    <div class="input-field">
-                                        <textarea class="materialize-textarea" th:id="${T(java.lang.String).format('%s-%s', item.index, 'content')}"
-                                            th:field="*{chapters[__${item.index}__].content}" style="height: 20em"></textarea>
-                                            <label th:for="${T(java.lang.String).format('%s-%s', item.index, 'content')}">Текст раздела</label>
-                                    </div>
-                                </div>
-                                <th:block th:if="${item.index != 0}">
-                                    <div class="col s1">
-                                        <button type="button" class="btn-floating waves-effect waves-light remove"><i class="material-icons">clear</i></button>
-                                    </div>
-                                </th:block>
-                                <th:block th:unless="${item.index != 0}">
-                                    <div class="col s1">
-                                        <button type="button" class="btn-floating waves-effect waves-light disabled remove"><i class="material-icons">clear</i></button>
-                                    </div>
-                                </th:block>
-                            </div>
-                        </th:block>
+                    <div class="input-field">
+                        <textarea id="content" class="materialize-textarea" th:field="*{content}"
+                                    style="height: 20em"></textarea>
+                        <label for="content">Контент</label>
                     </div>
                     <button type="submit" class="btn waves-effect waves-light">Сохранить</button>
                     <button id="addition-chapter" type="button" class="btn waves-effect waves-light">Добавить раздел</button>
@@ -53,54 +31,54 @@
         <th:block th:replace="~{fragments/footer :: footer}"></th:block>
     </div>
     <script>
-        document.querySelector("#addition-chapter").addEventListener("click", () => {
-            const body = createBody()
-
-            fetch("/articles/create/addition-chapter", {
-                method: "POST",
-                body,
-                headers: {
-                    "Content-type": "application/x-www-form-urlencoded"
-                }
-            }).then(response => {
-                response.text().then(value => {
-                    document.querySelector("#chapters").innerHTML = value;
-                    document.querySelectorAll("#chapters .remove").forEach(item => {
-                        item.addEventListener('click', (e) => {
-                            deleteItemChapter(e)
-                        })
-                    })
-                });
-            });
-        });
-
-        document.querySelectorAll("#chapters .remove").forEach(item => {
-            item.addEventListener('click', (e) => {
-                deleteItemChapter(e)
-            })
-        })
-
-        function deleteItemChapter(e) {
-            const button = e.currentTarget;
-            const deleteItem = button.closest("div.row");
-            deleteItem.remove();
-        }
-
-        function createBody() {
-            const textarea = document.querySelectorAll("textarea");
-            let body = '';
-            textarea.forEach((item, index) => {
-                if (index + 1 !== textarea.length) {
-                    body = `${body}${item.name}=${item.value}&`;
-                } else {
-                    body = `${body}${item.name}=${item.value}`;
-                }
-            });
-            document.querySelectorAll("input").forEach( item => {
-                body = `${body}&${item.name}=${item.value}`;
-            });
-            return body
-        }
+        // document.querySelector("#addition-chapter").addEventListener("click", () => {
+        //     const body = createBody()
+        //
+        //     fetch("/articles/create/addition-chapter", {
+        //         method: "POST",
+        //         body,
+        //         headers: {
+        //             "Content-type": "application/x-www-form-urlencoded"
+        //         }
+        //     }).then(response => {
+        //         response.text().then(value => {
+        //             document.querySelector("#chapters").innerHTML = value;
+        //             document.querySelectorAll("#chapters .remove").forEach(item => {
+        //                 item.addEventListener('click', (e) => {
+        //                     deleteItemChapter(e)
+        //                 })
+        //             })
+        //         });
+        //     });
+        // });
+        //
+        // document.querySelectorAll("#chapters .remove").forEach(item => {
+        //     item.addEventListener('click', (e) => {
+        //         deleteItemChapter(e)
+        //     })
+        // })
+        //
+        // function deleteItemChapter(e) {
+        //     const button = e.currentTarget;
+        //     const deleteItem = button.closest("div.row");
+        //     deleteItem.remove();
+        // }
+        //
+        // function createBody() {
+        //     const textarea = document.querySelectorAll("textarea");
+        //     let body = '';
+        //     textarea.forEach((item, index) => {
+        //         if (index + 1 !== textarea.length) {
+        //             body = `${body}${item.name}=${item.value}&`;
+        //         } else {
+        //             body = `${body}${item.name}=${item.value}`;
+        //         }
+        //     });
+        //     document.querySelectorAll("input").forEach( item => {
+        //         body = `${body}&${item.name}=${item.value}`;
+        //     });
+        //     return body
+        // }
 
     </script>
 </body>
