--- a/src/main/resources/templates/fragments/articles/bar-search-article.html
+++ b/src/main/resources/templates/fragments/articles/bar-search-article.html
@@ -23,6 +23,7 @@
                 </div>
                 <div class="card-action">
                     <a class="btn waves-effect waves-light center-align" th:href="@{/articles/create}">Создать статью</a>
+                    <a class="btn waves-effect waves-light center-align" th:href="@{/articles/create/upload}">Загрузить статью</a>
                 </div>
             </div>
         </div>
