--- a/src/main/resources/templates/articles/all-articles-by-user.html
+++ b/src/main/resources/templates/articles/all-articles-by-user.html
@@ -21,6 +21,11 @@
         <th:block th:replace="~{fragments/footer :: footer}"></th:block>
     </div>
     <script>
+        document.querySelectorAll(".truncate-text").forEach(item => {
+            item.textContent = truncateText(item)
+        })
+
+
         function changeStateCheckbox(form) {
             const checkbox = form.querySelector(".switch-input")
             const body = createBody(checkbox, form)
