--- a/src/main/resources/templates/articles/view.html
+++ b/src/main/resources/templates/articles/view.html
@@ -25,4 +25,9 @@
         <th:block th:replace="~{fragments/footer :: footer}"></th:block>
     </div>
 </body>
+<script>
+    document.querySelectorAll("p").forEach(item => {
+       item.textContent = transferText(item)
+    });
+</script>
 </html>
