--- a/src/main/resources/templates/fragments/links.html
+++ b/src/main/resources/templates/fragments/links.html
@@ -8,6 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script th:src="@{/static/js/truncate-text.js}"></script>
+        <script th:src="@{/static/js/transfer-text.js}"></script>
     </th:block>
     <meta charset="UTF-8">
     <th:block th:fragment="title">
