--- a/src/main/resources/templates/articles/all-articles-by-user.html
+++ b/src/main/resources/templates/articles/all-articles-by-user.html
@@ -10,19 +10,28 @@
         <th:block th:replace="~{fragments/header :: header}"></th:block>
         <div class="page-content d-flex aligns-items-center flex-direction-column">
             <th:block th:replace="~{fragments/articles/bar-search-article :: bar-search-article}"></th:block>
-            <!--/*@thymesVar id="articles" type="java.util.List<com.kamegatze.learnjvm.model.articles.Article>"*/-->
-            <th:block th:if="${!articles.isEmpty()}" th:each="article, item : ${articles}">
+            <!--/*@thymesVar id="articles" type="org.springframework.data.domain.Page<com.kamegatze.learnjvm.model.articles.Article>"*/-->
+            <th:block th:if="${!articles.content.isEmpty()}" th:each="article, item : ${articles.content}">
                 <th:block th:replace="~{fragments/articles/collection-article :: collection-article-editor}"></th:block>
             </th:block>
-            <th:block th:if="${articles.isEmpty()}">
+            <th:block th:if="${articles.content.isEmpty()}">
                 <th:block th:replace="~{fragments/articles/not-found-article :: not-found-article}"></th:block>
             </th:block>
+            <th:block th:replace="~{fragments/pagination :: pagination(${articles.isFirst()}, ${articles.isLast()}, ${articles.getNumber()},
+                ${articles.getTotalPages()}, ${articles.getSize()})}"></th:block>
         </div>
         <th:block th:replace="~{fragments/footer :: footer}"></th:block>
     </div>
     <script>
-        document.querySelectorAll(".transfer-word").forEach(item => {
+        const itemsP = document.querySelectorAll(".transfer-word")
+        itemsP.forEach(item => {
             item.textContent = transferText(item)
+        })
+
+        window.addEventListener("resize", () => {
+            itemsP.forEach(item => {
+                item.textContent = transferText(item)
+            })
         })
 
         document.querySelectorAll(".truncate-text").forEach(item => {
