--- a/src/main/resources/templates/articles/view.html
+++ b/src/main/resources/templates/articles/view.html
@@ -10,7 +10,7 @@
         <th:block th:replace="~{fragments/header :: header}"></th:block>
         <!--/*@thymesVar id="article" type="com.kamegatze.learnjvm.model.articles.Article"*/-->
         <div class="page-content">
-            <article class="row h-100 article">
+            <article class="row">
                 <div class="col s4"></div>
                 <div class="col s4 card">
                     <h5 class="center-align" th:utext="${article.label}"></h5>
@@ -26,8 +26,18 @@
     </div>
 </body>
 <script>
-    document.querySelectorAll("p").forEach(item => {
-       item.textContent = transferText(item)
+    const itemsP = document.querySelectorAll("p")
+    itemsP.forEach(item => {
+        item.textContent = transferText(item)
     });
+
+    window.addEventListener("resize", () => {
+        itemsP.forEach(item => {
+            item.textContent = transferText(item)
+        });
+    })
+
+
+
 </script>
 </html>
