replace spring-data-jdbc on spring-data-jpa

--- a/src/main/resources/templates/fragments/pagination.html
+++ b/src/main/resources/templates/fragments/pagination.html
@@ -8,13 +8,15 @@
 <th:block th:fragment="pagination(isFirst, isLast, number, totalPages, size, urls)">
     <ul class="pagination">
         <li th:class="${isFirst ? 'disabled' : 'waves-effect'}">
-            <a th:href="${isFirst ? '' : urls.get(number - 1)}"><i class="material-icons">chevron_left</i></a>
+            <a th:if="${!isFirst}" th:href="${urls.get(number - 1)}"><i class="material-icons">chevron_left</i></a>
+            <a th:if="${isFirst}"><i class="material-icons">chevron_left</i></a>
         </li>
         <th:block th:each="url, item : ${urls}">
             <li th:class="${number == item.index ? 'active': 'waves-effect'}"><a th:text="${item.index + 1}" th:href="${url}"></a></li>
         </th:block>
         <li th:class="${isLast ? 'disabled' : 'waves-effect'}">
-            <a th:href="${isLast ? '' : urls.get(number + 1)}"><i class="material-icons">chevron_right</i></a>
+            <a th:if="${!isLast}" th:href="${urls.get(number + 1)}"><i class="material-icons">chevron_right</i></a>
+            <a th:if="${isLast}"><i class="material-icons">chevron_right</i></a>
         </li>
     </ul>
 </th:block>
