--- a/src/main/resources/templates/fragments/articles/bar-search-article.html
+++ b/src/main/resources/templates/fragments/articles/bar-search-article.html
@@ -5,29 +5,48 @@
     <title>Title</title>
 </head>
 <body>
-<th:block th:fragment="bar-search-article">
+<th:block th:fragment="bar-search-article(filters, pageName, sizeName, sortName)">
     <div class="row container">
         <div class="col s3"></div>
         <div class="col s6">
-            <div class="card">
-                <div class="card-content">
-                    <form class="d-flex aligns-items-flex-end" action="#" th:action="@{/articles/search-by-name}" method="get">
+            <form class="d-flex flex-direction-column" action="#" th:action="@{/articles/search-by-name}" method="get">
+                <div class="card">
+                    <div class="card-content d-flex aligns-items-flex-end">
                         <div class="input-field flex-grow-1">
                             <input class="validate" type="text" id="search-input" th:name="${searchName}" th:value="${searchValue}">
                             <label for="search-input">Поиск по статьям</label>
-                            <input type="hidden" name="page" value="0">
-                            <input type="hidden" name="size" value="10">
+                            <input type="hidden" th:name="${pageName}" value="0">
+                            <input type="hidden" th:name="${sizeName}" value="5">
                         </div>
                         <div class="input-field ms-3">
                             <button type="submit" class="btn-floating waves-effect waves-light"><i class="material-icons">search</i></button>
                         </div>
-                    </form>
+                    </div>
+                    <div class="card-action">
+                        <a class="btn waves-effect waves-light center-align" th:href="@{/articles/create}">Создать статью</a>
+                        <a class="btn waves-effect waves-light center-align" th:href="@{/articles/create/upload}">Загрузить статью</a>
+                    </div>
                 </div>
-                <div class="card-action">
-                    <a class="btn waves-effect waves-light center-align" th:href="@{/articles/create}">Создать статью</a>
-                    <a class="btn waves-effect waves-light center-align" th:href="@{/articles/create/upload}">Загрузить статью</a>
-                </div>
-            </div>
+                <ul class="collapsible">
+                    <li>
+                        <div class="collapsible-header">
+                            <i class="material-icons">filter_list</i>
+                            Filters
+                        </div>
+                        <div class="collapsible-body">
+                            <!--/*@thymesVar id="filter" type="com.kamegatze.learnjvm.model.filtering.Filter"*/-->
+                            <div th:each="filter, item : ${filters}" class="input-field">
+                                <select id="select-published" th:name="${sortName}">
+                                    <option th:selected="${filter.direction.isEmpty()}" value="">Без сортировки</option>
+                                    <option th:selected="${filter.direction == 'asc'}" th:value="${filter.property + ',asc'}" th:text="${filter.nameAsc}"></option>
+                                    <option th:selected="${filter.direction == 'desc'}" th:value="${filter.property + ',desc'}" th:text="${filter.nameDesc}"></option>
+                                </select>
+                                <label th:text="${filter.label}" for="select-published"></label>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </form>
         </div>
         <div class="col s3"></div>
     </div>
