--- a/src/main/resources/templates/fragments/articles/collection-article.html
+++ b/src/main/resources/templates/fragments/articles/collection-article.html
@@ -15,9 +15,9 @@
                     <p class="truncate-text transfer-word" data-count-line="8" th:text="${@htmlConvectorImpl.toFirstAttributeToText('p', article.content)}"></p>
                 </div>
                 <div class="card-action d-flex">
-                    <a class="btn waves-effect waves-light" th:href="@{/articles/view/{id}(id=${article.id})}">Подробнее</a>
+                    <a class="btn waves-effect waves-light tooltipped" data-tooltip="Подробнее" th:href="@{/articles/view/{id}(id=${article.id})}">Подробнее</a>
                     <div class="flex-grow-1"></div>
-                    <div class="switch align-self-center">
+                    <div class="switch align-self-center tooltipped" data-tooltip="Опубликовать">
                         <label>
                             <form class="d-flex flex-direction-column" action="#" th:action="@{/articles/published/{id}((id=${article.id}))}" method="post" onchange="changeStateCheckbox(this)">
                                 <input th:if="${article.published}" checked class="switch-input" type="checkbox">
@@ -27,14 +27,22 @@
                             </form>
                         </label>
                     </div>
-                    <a th:href="@{/articles/edit/{id}(id=${article.id})}" class="btn-floating waves-effect waves-light blue ms-3"><i class="material-icons">edit</i></a>
-                    <form action="#" th:action="@{/articles/delete/{id}(id=${article.id})}" method="post">
-                        <button type="submit" class="btn-floating waves-effect waves-light red ms-3"><i class="material-icons">delete</i></button>
-                    </form>
+                    <a th:href="@{/articles/edit/{id}(id=${article.id})}" data-tooltip="Редактировать" class="btn-floating waves-circle waves-effect waves-light blue ms-3 tooltipped"><i class="material-icons">edit</i></a>
+                    <a href="#remove-modal" data-tooltip="Удалить" class="btn-floating waves-circle waves-effect waves-light red ms-3 tooltipped modal-trigger"><i class="material-icons">delete</i></a>
                 </div>
             </div>
         </div>
         <div class="col s3"></div>
+        <div id="remove-modal" class="modal" style="width: 30%">
+            <div class="modal-content">
+                <p>Вы уверены что хотите удалить?</p>
+            </div>
+            <div class="modal-footer">
+                <form action="#" th:action="@{/articles/delete/{id}(id=${article.id})}" method="post">
+                    <button type="submit" class="btn-small waves-effect waves-light red lighten-1"><i class="material-icons left">delete</i>Удалить</button>
+                </form>
+            </div>
+        </div>
     </div>
 </th:block>
 </body>
