--- a/src/main/resources/templates/articles/create.html
+++ b/src/main/resources/templates/articles/create.html
@@ -6,31 +6,30 @@
     <th:block th:replace="~{fragments/links :: title}"></th:block>
 </head>
 <body>
-    <div class="page">
-        <th:block th:replace="~{fragments/header :: header}"></th:block>
-        <div class="page-content d-flex aligns-items-center">
-            <div class="row container">
-                <div class="col s3"></div>
-                <!--/*@thymesVar id="article" type="com.kamegatze.learnjvm.model.articles.Article"*/-->
-                <form class="col s6" action="#" th:action="@{/articles/create}" th:object="${article}" method="post">
-                    <div class="input-field">
-                        <input class="validate" id="heading" type="text" th:field="*{label}">
-                        <label for="heading">Название статьи</label>
-                    </div>
-                    <div class="input-field">
-                        <textarea id="content" class="materialize-textarea" th:field="*{content}"
-                                    style="height: 20em"></textarea>
-                        <label for="content">Контент</label>
-                    </div>
-                    <button type="submit" class="btn waves-effect waves-light">Сохранить</button>
-                    <button id="addition-chapter" type="button" class="btn waves-effect waves-light">Добавить раздел</button>
-                </form>
-                <div class="col s3"></div>
-            </div>
+<div class="page">
+    <th:block th:replace="~{fragments/header :: header}"></th:block>
+    <div class="page-content d-flex aligns-items-center">
+        <div class="row container">
+            <div class="col s3"></div>
+            <!--/*@thymesVar id="article" type="com.kamegatze.learnjvm.model.articles.Article"*/-->
+            <form class="col s6" action="#" th:action="@{/articles/create}" th:object="${article}" method="post">
+                <div class="input-field">
+                    <input class="validate" id="heading" type="text" th:field="*{label}" th:value="${article.label}">
+                    <label for="heading">Название статьи</label>
+                </div>
+                <div class="input-field">
+                    <textarea id="content" class="materialize-textarea" th:field="*{content}"
+                              style="height: 20em" th:value="${article.content}"></textarea>
+                    <label for="content">Контент</label>
+                </div>
+                <button type="submit" class="btn waves-effect waves-light">Сохранить</button>
+            </form>
+            <div class="col s3"></div>
         </div>
-        <th:block th:replace="~{fragments/footer :: footer}"></th:block>
     </div>
-    <script>
+    <th:block th:replace="~{fragments/footer :: footer}"></th:block>
+</div>
+<script>
         // document.querySelector("#addition-chapter").addEventListener("click", () => {
         //     const body = createBody()
         //
