--- a/src/main/resources/templates/fragments/articles/collection-article.html
+++ b/src/main/resources/templates/fragments/articles/collection-article.html
@@ -27,8 +27,8 @@
                             </form>
                         </label>
                     </div>
-                    <a th:href="@{/articles/edit/{id}(id=${article.id})}" data-tooltip="Редактировать" class="btn btn-floating waves-circle waves-light blue ms-3 tooltipped"><i class="material-icons">edit</i></a>
-                    <a href="#remove-modal" data-tooltip="Удалить" class="btn btn-floating waves-circle waves-light red ms-3 tooltipped modal-trigger"><i class="material-icons">delete</i></a>
+                    <a th:href="@{/articles/edit/{id}(id=${article.id})}" data-tooltip="Редактировать" class="btn-large btn-floating waves-circle waves-light blue ms-3 tooltipped"><i class="material-icons">edit</i></a>
+                    <a href="#remove-modal" data-tooltip="Удалить" class="btn-large btn-floating waves-circle waves-light red ms-3 tooltipped modal-trigger"><i class="material-icons">delete</i></a>
                 </div>
             </div>
         </div>
