--- a/src/main/resources/templates/fragments/articles/collection-article.html
+++ b/src/main/resources/templates/fragments/articles/collection-article.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<th:block th:fragment="collection-article-editor">
+<!--/*@thymesVar id="filter" type="com.kamegatze.learnjvm.model.articles.Article"*/-->
+<th:block th:fragment="collection-article-editor(article)">
     <div class="row container">
         <div class="col s3"></div>
         <div class="col s6">
