--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,7 @@
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a th:href="@{/main/home}">Home</a></li>
-                <li><a th:href="@{/main/articles}">Articles</a></li>
+                <li><a th:href="@{/main/articles?page=0&size=5}">Articles</a></li>
                 <li><a th:href="@{/main/courses}">Courses</a></li>
                 <li><a href="#" class="dropdown-trigger btn-floating grey" data-target="account-dropdown"><i class="material-icons">account_circle</i></a></li>
             </ul>
