--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -8,51 +8,17 @@
 <body>
 <div class="page">
     <th:block th:replace="~{fragments/header :: header}"></th:block>
-    <div class="page-content justify-content-center">
-        <div class="row container">
-            <div class="col s3"></div>
-            <div class="col s6">
-                <div class="card">
-                    <div class="card-content">
-                        <a class="btn waves-effect waves-light center-align" th:href="@{/articles/create}">Создать статью</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s3"></div>
-        </div>
-        <!--/*@thymesVar id="articles" type="java.util.List<com.kamegatze.learnjvm.model.articles.Article>"*/-->
-        <th:block th:if="${!articles.isEmpty()}" th:each="article, item : ${articles}">
-            <div class="row container">
-                <div class="col s3"></div>
-                <div class="col s6">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="card-title" th:text="${article.label}"></span>
-                            <p class="truncate" th:text="${article.chapters.get(0).content}"></p>
-                        </div>
-                        <div class="card-action">
-                            <a class="btn waves-effect waves-light" th:href="@{/articles/view/{id}(id=${article.id})}">Подробнее</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s3"></div>
-            </div>
+    <div class="page-content d-flex aligns-items-center flex-direction-column">
+        <th:block th:replace="~{fragments/articles/bar-search-article :: bar-search-article(${filters}, ${pageName}, ${sizeName}, ${sortName}, ${urlSearch}, ${searchName}, ${searchValue})}"></th:block>
+        <th:block th:unless="${articles.content.isEmpty()}" th:each="article, item : ${articles.content}">
+            <th:block th:replace="~{fragments/articles/collection-article :: collection-article-editor(${article}, ${urlSearch})}"></th:block>
         </th:block>
-        <th:block th:if="${articles.isEmpty()}">
-            <div class="row container">
-                <div class="col s3"></div>
-                <div class="col s6">
-                    <div class="card">
-                        <div class="card-image">
-                            <img th:src="@{/static/image/images/not-found.png}" alt="404" height="300px" width="600px">
-                        </div>
-                        <div class="card-content">
-                            <p>Not found articles...</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s3"></div>
-            </div>
+        <th:block th:if="${articles.content.isEmpty()}">
+            <th:block th:replace="~{fragments/articles/not-found-article :: not-found-article}"></th:block>
+        </th:block>
+        <th:block th:unless="${articles.content.isEmpty()}">
+            <th:block th:replace="~{fragments/pagination :: pagination(${articles.isFirst()}, ${articles.isLast()}, ${articles.getNumber()},
+                ${articles.getTotalPages()}, ${articles.getSize()}, ${urls})}"></th:block>
         </th:block>
     </div>
     <th:block th:replace="~{fragments/footer :: footer}"></th:block>
